--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15"
   }
 }
