--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "nodemailer-express-handlebars": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
